# star-wars-back

./: .travis-ci.yml  Dockerfile  README.md  pyproject.toml  requirements.txt
app/: main.py  recommendations.py
tests/: test_run.py  tests.py  tests_all_items.py  tests_films.py  tests_no_parameter.py  tests_people.py  tests_planets.py  tests_recommendations.py  tests_routes.py  tests_starships.py
