[tool.poetry]
name = "["
version = "0.1.0"
description = ""
authors = ["Alynne Fereira <alynneferreiras@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Flask = "^2.2.2"
requests = "^2.28.2"
black = "^22.12.0"
pytest = "^7.2.1"
Flask-Cors = "^3.0.10"
coverage = "^7.0.5"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
